--- a/index.css
+++ b/index.css
@@ -5,7 +5,34 @@ body{
     justify-content: left;
     align-items: left;
   }
-  
+
+  .rounded{
+    font-size: 30px;
+    font-family: PP Agrandir;
+    color: #000000;
+  }
+
+  #imageLnum{
+    font-size: 80px;
+    font-family: PP Agrandir;
+    position: fixed;
+    width: 600px;
+    height: 200px;
+    top: 88%;
+    left:20px;
+  }
+
+  #imageRnum{
+    font-size: 80px;
+    font-family: PP Agrandir;
+    position: fixed;
+    width: 600px;
+    height: 200px;
+    top: 88%;
+    left:90%;
+
+  }
+
   #container{
     width: 100%;
     height: 750px;
