--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body{
     background-color: white;
-  
     display: flex;
     justify-content: left;
     align-items: left;
+    cursor: none;
   }
 
   .rounded{
